[package]
name = "ezscn"
version = "0.0.1"
edition = "2024"
authors = ["furkrn"]
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/furkrn/ezscn"

[workspace]
resolver = "3"
members = ["crates/*"]

[features]
default = []
std = []

[dependencies]

[build-dependencies]
